--- a/SwiftStock(Redo)/wwwroot/css/style.css
+++ b/SwiftStock(Redo)/wwwroot/css/style.css
@@ -705,6 +705,9 @@
   .h-\[calc\(100vh-8rem\)\] {
     height: calc(100vh - 8rem);
   }
+  .h-\[calc\(100vh-12rem\)\] {
+    height: calc(100vh - 12rem);
+  }
   .h-\[calc\(100vh-42rem\)\] {
     height: calc(100vh - 42rem);
   }
@@ -963,9 +966,6 @@
   .overflow-visible {
     overflow: visible;
   }
-  .overflow-x-auto {
-    overflow-x: auto;
-  }
   .overflow-y-auto {
     overflow-y: auto;
   }
@@ -1184,6 +1184,9 @@
   }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
+  }
+  .py-0\.5 {
+    padding-block: calc(var(--spacing) * 0.5);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
