--- a/SwiftStock(Redo)/Pages/Shared/_CashierLayout.cshtml
+++ b/SwiftStock(Redo)/Pages/Shared/_CashierLayout.cshtml
@@ -66,7 +66,7 @@
 <body>
     <header class="header">
         <div>
-            <h1 class="text-lg font-semibold m-0">Cashier Dashboard</h1>
+            <h1 class="text-lg font-semibold m-0">SwiftStock Cashier</h1>
         </div>
     </header>
 
